--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -33,6 +33,7 @@
         <item name="textInputStyle">@style/Widget.SoftMintApp.TextInputLayout</item>
         <item name="toolbarStyle">@style/Widget.SoftMintApp.Toolbar</item>
         <item name="cardViewStyle">@style/Widget.SoftMintApp.CardView</item>
+        <item name="bottomNavigationStyle">@style/Widget.SoftMintApp.BottomNavigationView</item>
     </style>
 
     <!-- Button style -->
@@ -66,5 +67,11 @@
         <item name="cardBackgroundColor">@color/surface</item>
         <item name="cardElevation">4dp</item>
         <item name="cardCornerRadius">8dp</item>
+    </style>
+
+    <style name="Widget.SoftMintApp.BottomNavigationView" parent="Widget.MaterialComponents.BottomNavigationView">
+        <item name="itemIconTint">@color/iconColor</item>
+        <item name="itemTextColor">@color/textPrimary</item>
+        <item name="itemBackground">@color/surface</item>
     </style>
 </resources>
