--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <!-- Light theme colors -->
+    <!-- Base Colors (Light Mode) -->
     <color name="primaryColor">#B2E0D6</color>  <!-- Soft Mint -->
     <color name="primaryDarkColor">#8FC9BD</color>  <!-- Darker Mint -->
     <color name="primaryLightColor">#D6F1EA</color>  <!-- Lighter Mint -->
@@ -13,7 +13,11 @@
     <color name="iconColor">#36454F</color>
     <color name="error">#E57373</color>
 
-    <color name="surfaceDark">#1E2B33</color>  <!-- Dark surface -->
-    <color name="textPrimaryDark">#E0E0E0</color>  <!-- Light text -->
-    <color name="textSecondaryDark">#A0A0A0</color>  <!-- Lighter text -->
+    <!-- Dark Mode Colors -->
+    <color name="primaryColorDark">#1E2B33</color>
+    <color name="primaryDarkColorDark">#36454F</color>
+    <color name="textPrimaryDark">#E0E0E0</color>
+    <color name="textSecondaryDark">#A0A0A0</color>
+    <color name="surfaceDark">#1E2B33</color>
+    <color name="iconColorDark">#FFFFFF</color>
 </resources>
