Now can add cities and areas

--- a/app/src/main/res/layout/activity_cities_alert_dialog.xml
+++ b/app/src/main/res/layout/activity_cities_alert_dialog.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -12,7 +11,7 @@
         android:layout_margin="30dp"
         android:fontFamily="serif"
         android:gravity="center"
-        android:text="What To Do With This Product?"
+        android:text="What To Do With This City &amp; Area?"
         android:textSize="26sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -30,7 +29,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView">
 
         <Button
-            android:id="@+id/positive"
+            android:id="@+id/edit"
             android:layout_width="match_parent"
             android:layout_height="55dp"
             android:layout_margin="10dp"
