Have to send data in AddSale Class

--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -12,7 +12,7 @@
         <item name="colorOnSecondary">@color/textOnPrimary</item>
 
         <!-- Status bar color -->
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+        <item name="android:statusBarColor" >?attr/colorPrimaryVariant</item>
 
         <!-- Background colors -->
         <item name="android:windowBackground">@color/primaryColorDark</item>
